Add Swagger for Questionnaire Responses Sync API
